unpackaged/main/default/objects/project_cloud__Financial_Snapshot__c/project_cloud__Financial_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Financial Snapshot</label>
    <nameField>
        <displayFormat>FS-{0}</displayFormat>
        <label>Financial Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>