unpackaged/main/default/objects/project_cloud__Financial_Snapshot__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <inlineHelpText>Description of the financial snapshot</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>