unpackaged/main/default/objects/project_cloud__Financial_Snapshot__c/fields/project_cloud__Type__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Type__c</fullName>
    <description>Type / Reasoning for Financial Snapshot</description>
    <inlineHelpText>The type of or reasoning for why a snapshot was taken</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Month End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>